unpackaged/main/default/objects/Milestone1_Log__c/Milestone1_Log__c.object-meta.xml
<CustomObject>
    <description>Force.com Labs - PM - Log items contain general information for a Project that a user may want to keep an informal record of.</description>
    <label>Log</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Project Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>