unpackaged/main/default/objects/Milestone1_Log__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <inlineHelpText>The project which we want to keep this log record for.</inlineHelpText>
    <label>Project</label>
    <referenceTo>Milestone1_Project__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Project_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>