unpackaged/main/default/objects/Milestone1_Log__c/fields/Project_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Project_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A milestone we want to log about.</inlineHelpText>
    <label>Project Milestone</label>
    <referenceTo>Milestone1_Milestone__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Project_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>