unpackaged/main/default/objects/Milestone1_Log__c/fields/Project_Time__c.field-meta.xml
<CustomField>
    <fullName>Project_Time__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A time entry we want to log some information about.</inlineHelpText>
    <label>Project Time</label>
    <referenceTo>Milestone1_Time__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Project_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>